Add mobile styles

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,6 @@
     <title></title>
   </head>
   <body>
-    <div id="root"></div>
+    <div className="container" id="root"></div>
   </body>
 </html>
